--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path_provider: ^2.1.2
   flutter_background_service: ^5.0.0
   url_launcher: ^6.2.0
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_test:
