Fixed UPI transaction problem

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
 
+    
+    <queries>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="upi" />
+    </intent>
+    <package android:name="com.google.android.apps.nbu.paisa.user" /> <package android:name="com.phonepe.app" /> <package android:name="net.one97.paytm" /> <package android:name="in.org.npci.upiapp" /> </queries>
+
     <application
         android:label="Time Manager"
         android:name="android.app.Application"
@@ -63,5 +71,7 @@
             android:foregroundServiceType="dataSync"
             android:enabled="true"
             android:exported="true" />
+
+            
     </application>
 </manifest>
